%% src\furniturematerial\furniturematerial.diagram.mmd

classDiagram
    %% DTOs
    class CreateFurniturematerialDto {
        +id_furniture: number
        +id_material: number
        +deleted_at?: Date | null
    }
    class UpdateFurniturematerialDto
    UpdateFurniturematerialDto --|> CreateFurniturematerialDto : extends (PartialType)

    class FurnitureMaterialResponseDto {
        +id: number
        +id_furniture: number
        +id_material: number
        +deleted_at?: Date | null
    }

    %% Service
    class FurniturematerialService {
        +constructor(prisma: PrismaService)
        +create(data: CreateFurniturematerialDto): Promise<furnitureMaterial>
        +findAll(): Promise<furnitureMaterial[]>
        +findOne(id: number): Promise<furnitureMaterial | null>
        +update(id: number, data: UpdateFurniturematerialDto): Promise<furnitureMaterial>
        +remove(id: number): Promise<furnitureMaterial>
    }

    %% Controller
    class FurniturematerialController {
        +constructor(furniturematerialService: FurniturematerialService)
        +create(createFurniturematerialDto: CreateFurniturematerialDto): Promise<FurnitureMaterialResponseDto>
        +findAll(): Promise<FurnitureMaterialResponseDto[]>
        +findOne(id: string): Promise<FurnitureMaterialResponseDto>
        +update(id: string, updateFurniturematerialDto: UpdateFurniturematerialDto): Promise<FurnitureMaterialResponseDto>
        +remove(id: string): Promise<FurnitureMaterialResponseDto>
    }

    %% Module
    class FurniturematerialModule {
        <<Module>>
    }

    %% Relationships
    FurniturematerialController --> FurniturematerialService : depends on
    FurniturematerialController ..> CreateFurniturematerialDto : uses
    FurniturematerialController ..> UpdateFurniturematerialDto : uses
    FurniturematerialController ..> FurnitureMaterialResponseDto : returns
    FurniturematerialService ..> CreateFurniturematerialDto : uses
    FurniturematerialService ..> UpdateFurniturematerialDto : uses
    FurniturematerialModule o-- FurniturematerialController : provides
    FurniturematerialModule o-- FurniturematerialService : provides
